incio de proyecto

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -7,5 +6,144 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+	
+    <!-- Header Start -->
+    <div class="container-fluid bg-dark p-0 mb-5">
+        <div class="row g-0 flex-column-reverse flex-lg-row">
+            <div class="col-lg-6 p-0 wow fadeIn" data-wow-delay="0.1s">
+                <div class="header-bg h-100 d-flex flex-column justify-content-center p-5">
+                    <h1 class="display-4 text-light mb-5">Innovación en la Producción de Hijuelos de Plátano</h1>
+                    <div class="d-flex align-items-center pt-4 animated slideInDown">
+                        <a href="services.html" class="btn btn-primary py-sm-3 px-3 px-sm-5 me-5">Leer Más</a>
+                        <button type="button" class="btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/G8EMnadzwI8?si=s8vj-piL7SzNT07O" data-bs-target="#videoModal">
+                            <span></span>
+                        </button>
+                        <h6 class="text-white m-0 ms-4 d-none d-sm-block">Ver Video</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                <div class="owl-carousel header-carousel">
+                    <div class="owl-carousel-item">
+                        <img class="img-fluid" src="img/carousel-1.jpg" alt="">
+                    </div>
+                    <div class="owl-carousel-item">
+                        <img class="img-fluid" src="img/carousel-2.jpg" alt="">
+                    </div>
+                    <div class="owl-carousel-item">
+                        <img class="img-fluid" src="img/carousel-3.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Header End -->
+
+    <!-- Video Modal Start -->
+    <div class="modal modal-video fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-0">
+                <div class="modal-header">
+                    <h3 class="modal-title" id="exampleModalLabel">Video de Youtube</h3>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- 16:9 aspect ratio -->
+                    <div class="ratio ratio-16x9">
+                        <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allow="autoplay"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Video Modal End -->
+
+    <!-- About Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <p><span class="text-primary me-2">#</span>Bienvenido a Smart Musa</p>
+                    <h1 class="display-5 mb-4">Innovamos la Reproducción de Hijuelos de Plátano</h1>
+                    <p class="mb-4" style="text-align: justify;">
+                        Somos un equipo de profesionales multidisciplinarios que pone a su servicio el "Sistema de gestión para la producción de hijuelos de plátano utilizando tecnología de Internet de las Cosas (IoT)".
+                    </p>
+                                       <h5 class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Ambiente Controlado</h5>
+                    <h5 class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Monitoreo en Tiempo Real</h5>
+                    <h5 class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Análisis de Datos</h5>
+                    <h5 class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Toma de decisiones Informadas</h5>
+                    <a class="btn btn-primary py-3 px-5 mt-3" href="services.html">Leer Más</a>
+                </div>
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="img-border">
+                        <img class="img-fluid" src="img/about.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- About End -->
+
+    <!-- Services Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-5 mb-5 align-items-end wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-6">
+                    <p><span class="text-primary me-2">#</span>Nuestras Soluciones</p>
+                    <h1 class="display-5 mb-0">Explora los <span class="text-primary">Soluciones</span> de Smart Musa</h1>
+                </div>
+                <div class="col-lg-6 text-lg-end">
+                    <a class="btn btn-primary py-3 px-5" href="services.html">Ver Soluciones</a>
+                </div>
+            </div>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="row g-4">
+                        <div class="col-12">
+                            <a class="animal-item" href="img/service-1.jpg" data-lightbox="service">
+                                <div class="position-relative">
+                                    <img class="img-fluid" src="img/service-1.jpg" alt="">
+                                    <div class="animal-text p-4">
+                                        <p class="text-white small text-uppercase mb-0">Tecnologia</p>
+                                        <h5 class="text-white mb-0">Cámara Térmica</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="row g-4">
+                        <div class="col-12">
+                            <a class="animal-item" href="img/service-2.jpg" data-lightbox="service">
+                                <div class="position-relative">
+                                    <img class="img-fluid" src="img/service-2.jpg" alt="">
+                                    <div class="animal-text p-4">
+                                        <p class="text-white small text-uppercase mb-0">Tecnologia</p>
+                                        <h5 class="text-white mb-0">Monitoreo IoT</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="row g-4">
+                        <div class="col-12">
+                            <a class="animal-item" href="img/service-3.jpg" data-lightbox="service">
+                                <div class="position-relative">
+                                    <img class="img-fluid" src="img/service-3.jpg" alt="">
+                                    <div class="animal-text p-4">
+                                        <p class="text-white small text-uppercase mb-0">Tecnologia</p>
+                                        <h5 class="text-white mb-0">Aplicación Web</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Services End -->
 </Layout>
