--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Smart Musa - Tecnología Innovadora en Agricultura</title>
+		<title>Fiis - Facultad de ingenieria en informatica y sistemas</title>
 		<!-- Google Web Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
     	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -65,8 +65,8 @@
 		 <!-- Navbar Start -->
 		 <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
 			<a href="index.html" class="navbar-brand p-0">
-				<img class="img-fluid me-3" src="img/icon/icon-10.png" alt="Icono">
-				<h1 class="m-0 text-primary">Smart Musa</h1>
+				<img class="img-fluid me-3" src="img/logo-fiss.png" alt="Icono">
+				<h1 class="m-0 text-primary">Visitas FIIS</h1>
 			</a>
 			<button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
 				<span class="navbar-toggler-icon"></span>
@@ -75,9 +75,9 @@
 				<div class="navbar-nav ms-auto">
 					<a href="index.html" class="nav-item nav-link active">Inicio</a>
 	
-					<a href="services.html" class="nav-item nav-link">Soluciones</a>
+					<a href="#services" class="nav-item nav-link">Instalaciones y programas</a>
 					<a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
-					<a href="order.html" class="nav-item nav-link">Realizar Pedido</a>
+					<a href="order.html" class="nav-item nav-link">Solicitar visita</a>
 				</div>
 				<a href="https://smartmusa.pages.dev/#/login" class="btn btn-primary">Demo<i class="fa fa-arrow-right ms-3"></i></a>
 			</div>
@@ -91,7 +91,7 @@
 						<h5 class="text-light mb-4">Dirección</h5>
 						<p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Av. Universitaria, Tingo María, Leoncio Prado, Huánuco, Perú</p>
 						<p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+51 950 631 965</p>
-						<p class="mb-2"><i class="fa fa-envelope me-3"></i>team.smartmusa@gmail.com </p>
+						<p class="mb-2"><i class="fa fa-envelope me-3"></i>fiis@unas.edu.pe </p>
 						<div class="d-flex pt-2">
 							<a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
 							<a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -103,7 +103,7 @@
 						<h5 class="text-light mb-4">Enlaces Rápidos</h5>
 						<a class="btn btn-link" href="">Sobre Nosotros</a>
 						<a class="btn btn-link" href="">Contáctanos</a>
-						<a class="btn btn-link" href="">Nuestros Soluciones</a>
+						<a class="btn btn-link" href="">Programas y instalaciones</a>
 						<a class="btn btn-link" href="">Términos y Condiciones</a>
 						<a class="btn btn-link" href="">Soporte</a>
 					</div>
@@ -111,7 +111,7 @@
 						<h5 class="text-light mb-4">Enlaces Populares</h5>
 						<a class="btn btn-link" href="">Sobre Nosotros</a>
 						<a class="btn btn-link" href="">Contáctanos</a>
-						<a class="btn btn-link" href="">Nuestros Soluciones</a>
+						<a class="btn btn-link" href="">Programas y instalaciones</a>
 						<a class="btn btn-link" href="">Términos y Condiciones</a>
 						<a class="btn btn-link" href="">Soporte</a>
 					</div>
@@ -129,10 +129,10 @@
 				<div class="copyright">
 					<div class="row">
 						<div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-							&copy; <a class="border-bottom" href="#">www.smartmusa.com</a>, Todos los Derechos Reservados.
+							&copy; <a class="border-bottom" href="#">www.fiis.unas.edu.pe</a>, Todos los Derechos Reservados.
 						</div>
 						<div class="col-md-6 text-center text-md-end">
-							Diseñado por <a class="border-bottom" href="https://github.com/giovanni-pe">GK</a>
+							Diseñado por <a class="border-bottom" href="https://github.com/giovanni-pe">GPTI-GROUP</a>
 						</div>
 					</div>
 				</div>
