--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,17 +8,71 @@ import Layout from "../layouts/Layout.astro";
     <div class="container">
         <div class="row g-5">
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                <h1 class="display-5 mb-4">Cooperación Interdisciplinaria</h1>
+                <h1 class="display-5 mb-4">Facultad de ingieneria en informatica y sistemas</h1>
                 <p style="text-align: justify;">
-                    La Facultad de Recursos Naturales Renovables y la Facultad de Ingeniería en Informática y Sistemas (FIIS) han unido fuerzas para desarrollar soluciones innovadoras que integran el monitoreo IoT y la producción agrícola inteligente, específicamente en la multiplicación de hijuelos de plátano mediante cámaras térmicas. Juntos, optimizamos el proceso de propagación de los hijuelos utilizando tecnología avanzada, asegurando la sostenibilidad y eficiencia en la producción.
+                    Bienvenidos al Sistema de Visitas - FIIS.
                 </p>
                 <p style="text-align: justify;">
-                    El uso de sensores inteligentes y sistemas de control digital permite monitorear las condiciones dentro de las cámaras térmicas, como la temperatura y la humedad, creando un ambiente controlado ideal para el crecimiento saludable de los hijuelos de plátano. Esta colaboración interdisciplinaria ha permitido avances significativos en la propagación de hijuelos libres de enfermedades, garantizando una producción agrícola más eficiente y sostenible.
+                    La Facultad de Ingeniería en Informática y Sistemas (FIIS) de la Universidad Nacional Agraria de la Selva abre sus puertas a estudiantes, profesionales y público en general interesados en conocer nuestras instalaciones y programas académicos.
                 </p>
             </div>
             
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                <img class="img-fluid" src="img/team/us.png" alt="Innovación Agrícola">
+                <img class="img-fluid" src="img/fiis-unas.jpg" alt="Innovación Agrícola">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="row g-5">
+            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                <h1 class="display-5 mb-4">¿Por qué visitarnos?
+                </h1>
+                <p style="text-align: justify;">
+                    Desde el año 2000, nuestra facultad ha sido un centro de excelencia en la formación de profesionales en tecnología e informática. Durante tu visita podrás:
+                </p>
+                <ul>
+                    <li>Conocer nuestros modernos laboratorios de cómputo</li>
+                    <li>
+                        Explorar nuestras aulas y espacios de aprendizaje
+                    </li>
+                    <li>Interactuar con estudiantes y docentes</li>
+                    <li>Informarte sobre nuestros programas académicos</li>
+                    <li>Descubrir las oportunidades que ofrecemos</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="row g-5">
+            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                <h1 class="display-5 mb-4">Proceso de Visitas</h1>
+                <p style="text-align: justify;">
+                    A través de este sistema, puedes programar fácilmente una visita a nuestras instalaciones. El proceso es simple:
+                </p>
+                <ul>
+                    <li>Selecciona la fecha y hora que prefieras</li>
+                    <li>Completa el formulario con tus datos</li>
+                    <li>Recibe la confirmación de tu cita</li>
+                    <li>Preséntate en la fecha acordada con tu confirmación</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="row g-5">
+            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                <h1 class="display-5 mb-4">Ubicación y Acceso</h1>
+                <p style="text-align: justify;">
+                    Nos encontramos en la ciudad de Tingo María, en el campus principal de la Universidad Nacional Agraria de la Selva. Contamos con fácil acceso y señalización para guiar a nuestros visitantes.
+                </p>
+                <p style="text-align: justify;"> ¡Esperamos tu visita! Descubre por qué la FIIS es una excelente opción para tu desarrollo profesional en el campo de la tecnología e informática. </p>
+                
             </div>
         </div>
     </div>
@@ -29,17 +83,8 @@ import Layout from "../layouts/Layout.astro";
 <!-- Equipo Start -->
 <div class="container-xxl py-5">
     <div class="container">
-        <h1 class="display-5 text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Nuestro Equipo</h1>
+        <h1 class="display-5 text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Nuestros equipo</h1>
         <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-            <div class="testimonial-item text-center">
-                <img class="img-fluid rounded-circle border border-2 p-2 mx-auto mb-4"
-                     src="img/team/pocomucha.png" style="width: 100px; height: 100px;">
-                     <div class="testimonial-text rounded text-center p-4">
-                        <h5 class="mb-1">- Dr. Vicente Pocomucha Poma</h5>
-                        <span class="fst-italic">Ingeniero en Recursos Naturales Renovables</span>
-                    </div>
-                    
-            </div>
             <div class="testimonial-item text-center">
                 <img class="img-fluid rounded-circle border border-2 p-2 mx-auto mb-4"
                      src="img/team/william.png" style="width: 100px; height: 100px;">
@@ -49,32 +94,12 @@ import Layout from "../layouts/Layout.astro";
                   </div>
                     
             </div>
-            
-            
             <div class="testimonial-item text-center">
                 <img class="img-fluid rounded-circle border border-2 p-2 mx-auto mb-4"
                      src="img/team/einstein.png" style="width: 100px; height: 100px;">
                      <div class="testimonial-text rounded text-center p-4">
                         <h5 class="mb-1">- Ing. Einstein Arnold Ortiz Morales</h5>
                       <span class="fst-italic">Ingeniero en Informática y Sistemas</span>
-                  </div>
-                    
-            </div>
-            <div class="testimonial-item text-center">
-                <img class="img-fluid rounded-circle border border-2 p-2 mx-auto mb-4"
-                     src="img/team/andy.png" style="width: 100px; height: 100px;">
-                     <div class="testimonial-text rounded text-center p-4">
-                        <h5 class="mb-1">- Luis Ponce Aspajo	</h5>
-                      <span class="fst-italic"> Est. Ingenieria en Informática y Sistemas</span>
-                  </div>
-                    
-            </div>
-            <div class="testimonial-item text-center">
-                <img class="img-fluid rounded-circle border border-2 p-2 mx-auto mb-4"
-                     src="img/team/giovanni.png" style="width: 100px; height: 100px;">
-                     <div class="testimonial-text rounded text-center p-4">
-                        <h5 class="mb-1">-Giovanni Kuenen Pérez Espinoza	</h5>
-                      <span class="fst-italic"> Est. Ingenieria en Informática y Sistemas</span>
                   </div>
                     
             </div>
