--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Layout from '../layouts/Layout.astro';
         <div class="row g-0 flex-column-reverse flex-lg-row">
             <div class="col-lg-6 p-0 wow fadeIn" data-wow-delay="0.1s">
                 <div class="header-bg h-100 d-flex flex-column justify-content-center p-5">
-                    <h1 class="display-4 text-light mb-5">Innovación en la Producción de Hijuelos de Plátano</h1>
+                    <h1 class="display-4 text-light mb-5">Explora nuestas instalaciones y programas</h1>
                     <div class="d-flex align-items-center pt-4 animated slideInDown">
                         <a href="services.html" class="btn btn-primary py-sm-3 px-3 px-sm-5 me-5">Leer Más</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/G8EMnadzwI8?si=s8vj-piL7SzNT07O" data-bs-target="#videoModal">
@@ -25,13 +25,13 @@ import Layout from '../layouts/Layout.astro';
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                 <div class="owl-carousel header-carousel">
                     <div class="owl-carousel-item">
-                        <img class="img-fluid" src="img/carousel-1.jpg" alt="">
+                        <img class="img-fluid" src="img/instalacion1.jpeg" alt="">
                     </div>
                     <div class="owl-carousel-item">
-                        <img class="img-fluid" src="img/carousel-2.jpg" alt="">
+                        <img class="img-fluid" src="img/instalacion2.jpeg" alt="">
                     </div>
                     <div class="owl-carousel-item">
-                        <img class="img-fluid" src="img/carousel-3.jpg" alt="">
+                        <img class="img-fluid" src="img/instalacion1.jpeg" alt="">
                     </div>
                 </div>
             </div>
@@ -63,20 +63,20 @@ import Layout from '../layouts/Layout.astro';
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <p><span class="text-primary me-2">#</span>Bienvenido a Smart Musa</p>
-                    <h1 class="display-5 mb-4">Innovamos la Reproducción de Hijuelos de Plátano</h1>
+                    <p><span class="text-primary me-2">#</span>Bienvenido a FIIS UNAS</p>
+                    <h1 class="display-5 mb-4">Explora nuestas instalaciones y programas</h1>
                     <p class="mb-4" style="text-align: justify;">
-                        Somos un equipo de profesionales multidisciplinarios que pone a su servicio el "Sistema de gestión para la producción de hijuelos de plátano utilizando tecnología de Internet de las Cosas (IoT)".
+						Abrimos nuestras puertas para que puedas conocer nuestras instalaciones y servicios.
                     </p>
-                                       <h5 class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Ambiente Controlado</h5>
-                    <h5 class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Monitoreo en Tiempo Real</h5>
-                    <h5 class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Análisis de Datos</h5>
-                    <h5 class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Toma de decisiones Informadas</h5>
+                     <h5 class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Lineas de carrera acorde con el mercado</h5>
+                    <h5 class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Instalaciones totalmente equipadas</h5>
+                    <h5 class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Data center certificado</h5>
+                    <h5 class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Mas de 500 alumnos actualmente</h5>
                     <a class="btn btn-primary py-3 px-5 mt-3" href="services.html">Leer Más</a>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/about.jpg" alt="">
+                        <img class="img-fluid" src="img/instalacion3.jpeg" alt="">
                     </div>
                 </div>
             </div>
@@ -85,15 +85,15 @@ import Layout from '../layouts/Layout.astro';
     <!-- About End -->
 
     <!-- Services Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5" id="services">
         <div class="container">
             <div class="row g-5 mb-5 align-items-end wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
-                    <p><span class="text-primary me-2">#</span>Nuestras Soluciones</p>
-                    <h1 class="display-5 mb-0">Explora los <span class="text-primary">Soluciones</span> de Smart Musa</h1>
+                    <p><span class="text-primary me-2">#</span>Nuestras instalaciones</p>
+                    <h1 class="display-5 mb-0">Explora las <span class="text-primary">instalaciones y programas</span> de nuestra facultad</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="services.html">Ver Soluciones</a>
+                    <a class="btn btn-primary py-3 px-5" href="services.html">Ver mas</a>
                 </div>
             </div>
             <div class="row g-4">
@@ -102,10 +102,10 @@ import Layout from '../layouts/Layout.astro';
                         <div class="col-12">
                             <a class="animal-item" href="img/service-1.jpg" data-lightbox="service">
                                 <div class="position-relative">
-                                    <img class="img-fluid" src="img/service-1.jpg" alt="">
+                                    <img class="img-fluid" src="img/instalacion4.jpeg" alt="">
                                     <div class="animal-text p-4">
-                                        <p class="text-white small text-uppercase mb-0">Tecnologia</p>
-                                        <h5 class="text-white mb-0">Cámara Térmica</h5>
+                                        <p class="text-white small text-uppercase mb-0">Programa</p>
+                                        <h5 class="text-white mb-0">Desarrollo de software</h5>
                                     </div>
                                 </div>
                             </a>
@@ -117,10 +117,10 @@ import Layout from '../layouts/Layout.astro';
                         <div class="col-12">
                             <a class="animal-item" href="img/service-2.jpg" data-lightbox="service">
                                 <div class="position-relative">
-                                    <img class="img-fluid" src="img/service-2.jpg" alt="">
+                                    <img class="img-fluid" src="img/instalacion2.jpeg" alt="">
                                     <div class="animal-text p-4">
-                                        <p class="text-white small text-uppercase mb-0">Tecnologia</p>
-                                        <h5 class="text-white mb-0">Monitoreo IoT</h5>
+                                        <p class="text-white small text-uppercase mb-0">Programa</p>
+                                        <h5 class="text-white mb-0">Tegnologias de la informacion</h5>
                                     </div>
                                 </div>
                             </a>
@@ -132,10 +132,10 @@ import Layout from '../layouts/Layout.astro';
                         <div class="col-12">
                             <a class="animal-item" href="img/service-3.jpg" data-lightbox="service">
                                 <div class="position-relative">
-                                    <img class="img-fluid" src="img/service-3.jpg" alt="">
+                                    <img class="img-fluid" src="img/instalacion2.jpeg" alt="">
                                     <div class="animal-text p-4">
-                                        <p class="text-white small text-uppercase mb-0">Tecnologia</p>
-                                        <h5 class="text-white mb-0">Aplicación Web</h5>
+                                        <p class="text-white small text-uppercase mb-0">Intalaciones</p>
+                                        <h5 class="text-white mb-0">Data center</h5>
                                     </div>
                                 </div>
                             </a>
