--- a/src/pages/order.astro
+++ b/src/pages/order.astro
@@ -8,8 +8,7 @@ import Layout from "../layouts/Layout.astro";
             <div class="col-lg-8">
                 <div class="card p-4">
                     <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 20px;">
-                        <h2
-                            style="background-color: #00ff88; color: white; padding: 10px 20px; border-radius: 8px; text-align: center; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+                        <h2 class="btn-primary">
                             Solicitud de Pedidos
                         </h2>
                     </div>
