--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #2EB872;
+    --primary: #3b82f6 !important;
     --light: #F3F4F5;
     --dark: #282F34;
 }
@@ -143,7 +143,11 @@
 
 /*** Header ***/
 .header-bg {
-    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/bg-1.jpg) center center no-repeat;
+    /* background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../img/fiis-unas.jpg) center center no-repeat; */
+    /* background: rgba(0, 0, 0, .15), url(../img/fiis-unas.jpg) center center no-repeat; */
+    background-color: rgba(0, 0, 0, .4);
+    background-image: url(../img/fiis-unas.jpg);
+    background-blend-mode: overlay;
     background-size: cover;
 }
 
@@ -519,7 +523,7 @@
 
 /*** Footer ***/
 .footer {
-    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/bg-2.jpg) center center no-repeat;
+    /* background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/bg-2.jpg) center center no-repeat; */
     background-size: cover;
 }
 
