--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -77,7 +77,7 @@
 	
 					<a href="#services" class="nav-item nav-link">Instalaciones y programas</a>
 					<a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
-					<a href="order.html" class="nav-item nav-link">Solicitar visita</a>
+					<a href="https://vtfweb.vercel.app/" class="nav-item nav-link">Solicitar visita</a>
 				</div>
 				<a href="https://smartmusa.pages.dev/#/login" class="btn btn-primary">Demo<i class="fa fa-arrow-right ms-3"></i></a>
 			</div>
