--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -73,15 +73,15 @@
 			</button>
 			<div class="collapse navbar-collapse py-4 py-lg-0" id="navbarCollapse">
 				<div class="navbar-nav ms-auto">
-					<a href="index.html" class="nav-item nav-link active">Inicio</a>
+					<a href="/" class="nav-item nav-link active">Inicio</a>
 	
 					<a href="#services" class="nav-item nav-link">Instalaciones y programas</a>
-					<a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
-					<a href="https://vtfweb.vercel.app/" class="nav-item nav-link">Solicitar visita</a>
+					<a href="/about" class="nav-item nav-link">Sobre Nosotros</a>
 				</div>
-				<a href="https://smartmusa.pages.dev/#/login" class="btn btn-primary">Demo<i class="fa fa-arrow-right ms-3"></i></a>
+				<a href="https://vtfweb.vercel.app/" class="btn btn-primary">Solicitar visita<i class="fa fa-arrow-right ms-3"></i></a>
 			</div>
 		</nav>
+
 		<slot/>
 		<!-- Footer Start -->
 		<div class="container-fluid footer bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
