blank page to redirect

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -78,7 +78,7 @@
 					<a href="#services" class="nav-item nav-link">Instalaciones y programas</a>
 					<a href="/about" class="nav-item nav-link">Sobre Nosotros</a>
 				</div>
-				<a href="https://vtfweb.vercel.app/" class="btn btn-primary">Solicitar visita<i class="fa fa-arrow-right ms-3"></i></a>
+				<a href="https://vtfweb.vercel.app/" class="btn btn-primary" target="_blank">Solicitar visita<i class="fa fa-arrow-right ms-3" ></i></a>
 			</div>
 		</nav>
 
