--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Layout from '../layouts/Layout.astro';
                     <h1 class="display-4 text-light mb-5">Explora nuestas instalaciones y programas</h1>
                     <div class="d-flex align-items-center pt-4 animated slideInDown">
                         <a href="services.html" class="btn btn-primary py-sm-3 px-3 px-sm-5 me-5">Leer Más</a>
-                        <button type="button" class="btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/G8EMnadzwI8?si=s8vj-piL7SzNT07O" data-bs-target="#videoModal">
+                        <button type="button" class="btn-play" data-bs-toggle="modal" data-src="https://www.youtube-nocookie.com/embed/Y_74wWgXBcA" data-bs-target="#videoModal">
                             <span></span>
                         </button>
                         <h6 class="text-white m-0 ms-4 d-none d-sm-block">Ver Video</h6>
